@@ -20,8 +20,8 @@
 # executables. Edit it to point to wherever you want them to live. 
 # Note that ./configure takes care of this automatically.
 
-EXECPATH = /usr/local/bin
-MANPATH = /usr/local/man
+EXECPATH = /Users/schulz/SOURCES/Projects/E/PROVER
+MANPATH = /Users/schulz/SOURCES/Projects/E/DOC/man
 
 # Makefile special variables
 #
